sbatch_output/run_gpu43213080.err
  File "/work/DNAL/shi.cheng/NPP/Satellite_Fusion/npp.py", line 336
    if dataset == "PinMNIST":
                             ^
IndentationError: unindent does not match any outer indentation level
